added features to admin panel views

--- a/templates/admin/admin.html
+++ b/templates/admin/admin.html
@@ -39,10 +39,10 @@
                             <a class="nav-link" href="{% url 'view_all_doctors' %}">View Doctors </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'services_page' %}">view Bookings</a>
+                            <a class="nav-link" href="{% url 'view_bookings' %}">view Bookings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{% url 'signin' %}">View users</a>
+                            <a class="nav-link" href="{% url ' view_user_profile' %}">View users</a>
                         </li>
 
                         <li class="nav-item mr-lg-5">
