--- a/templates/admin/doctors_view.html
+++ b/templates/admin/doctors_view.html
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <title>Home</title>
+   
     <style>
 
 /* .btn{
@@ -29,7 +32,7 @@ th {
   padding: 15px;
   text-align: left;
   color: rgb(112, 39, 39);
-  background-color: rgb(183, 133, 176);
+  background-color: rgb(0,206,209);
   
 }
 td {
@@ -74,8 +77,8 @@ td {
         <th>Doctor name</th>
         <th>Department</th>
         <th>About</th>
-        <th>Edit details</th>
-        <th>Delete</th>    
+        <th>Actions</th>
+        
     </tr>
     {% for doctor in all_doctors %}
     <tr>
@@ -88,8 +91,8 @@ td {
     
     <!-- <div class="right"> -->
         
-        <td><a href="#"><button class="right">Edit</button></a></td>
-        <td><a href="#" onclick="return confirm('Are you sure want to delete?')"><i class="material-icons">delete</i></a></td>
+        <td><a href="#"><button class="right">Edit<i class='fas fa-edit'></i></button></a><br><br>
+        <a href="#" onclick="return confirm('Are you sure want to delete?')"><i class="material-icons">delete</i></a></td>
     <!-- </div> -->
     </tr>
     {%endfor%}
