--- a/templates/admin/users_view.html
+++ b/templates/admin/users_view.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    
     <title>Home</title>
     <style>
 
@@ -29,7 +30,7 @@ th {
   padding: 15px;
   text-align: left;
   color: rgb(112, 39, 39);
-  background-color: rgb(183, 133, 176);
+  background-color: rgb(255,222,173);
   
 }
 td {
@@ -75,8 +76,8 @@ td {
         <th>Age</th>
         <th>Address</th>
         <th>Phone number</th>
-        <th>Edit details</th>
-        <th>Delete</th>    
+        <th>Actions</th>
+            
     </tr>
     {% for user in all_users %}
     <tr>
@@ -90,8 +91,8 @@ td {
     
     <!-- <div class="right"> -->
         
-        <td><a href="#"><button class="right">Edit</button></a></td>
-        <td><a href="#" onclick="return confirm('Are you sure want to delete?')"><i class="material-icons">delete</i></a></td>
+        <td><a href="#"><button class="right">Edit</button></a><br><br>
+        <a href="#" onclick="return confirm('Are you sure want to delete?')"><i class="material-icons">delete</i></a></td>
     <!-- </div> -->
     </tr>
     {%endfor%}
