--- a/templates/admin/view_bookings.html
+++ b/templates/admin/view_bookings.html
@@ -29,7 +29,7 @@ th {
   padding: 15px;
   text-align: left;
   color: rgb(112, 39, 39);
-  background-color: rgb(183, 133, 176);
+  background-color: rgb(255,127,80);
   
 }
 td {
@@ -73,22 +73,21 @@ td {
     <tr> 
         <th>Doctor name</th>
         <th>Booking Date&time</th>
-        <th>Edit details</th>
-        <th>Delete</th>    
+        <th>Actions</th>
+           
+        {% comment %} <th>Edit details</th>
+        <th>Delete</th>     {% endcomment %}
     </tr>
     {% for bookings in all_bookings %}
     <tr>
           
     <td><p class="doc-name">{{b.Doctor_Name}}</p><br></td>
     <td><p>Booked on {{b.Booking_Date}} <br> at {{b.Booking_Time}} </p><br></td>
-   
-    
-    
     
     <!-- <div class="right"> -->
         
-        <td><a href="#"><button class="right">Edit</button></a></td>
-        <td><a href="#" onclick="return confirm('Are you sure want to delete?')"><i class="material-icons">delete</i></a></td>
+        <td><a href="#"><button class="right">Edit</button></a><br><br>
+        <a href="#" onclick="return confirm('Are you sure want to delete?')"><i class="material-icons">delete</i></a></td>
     <!-- </div> -->
     </tr>
     {%endfor%}
