--- a/templates/admin/view_bookings.html
+++ b/templates/admin/view_bookings.html
@@ -87,7 +87,8 @@ td {
     <!-- <div class="right"> -->
         
         <td><a href="#"><button class="right">Edit</button></a><br><br>
-        <a href="#" onclick="return confirm('Are you sure want to delete?')"><i class="material-icons">delete</i></a></td>
+        {% comment %} <a href="{%url 'delete_booking' pk=cc.pk %}" onclick="return confirm('Are you sure want to delete?')"><i class="material-icons">delete</i></a></td> {% endcomment %}
+        <p type="submit" name="id" value="{{booking.Patient_ID}}"><i class="material-icons">delete</i></p></td>
     <!-- </div> -->
     </tr>
     {%endfor%}
